style.css
/******** GLOBAL ********/
:root {
  --font-family-serif: "Fraunces-subset", "Fraunces", "Fraunces 144pt Soft",
    ui-serif, serif;
  --font-family-sans: "Public Sans", ui-sans-serif, system-ui, sans-serif;
  --line-height: 1.618;

  --color-paper: #fff;
  --color-text-bold: rgba(0, 0, 0, 1);
  --color-text: rgba(0, 0, 0, 0.87);
  --color-secondary: rgba(0, 0, 0, 0.54);
  --color-underline: rgba(0, 0, 0, 0.33);
  --color-accent: #ba160c;

  font-size: 11pt;
}

html {
  margin: 0;
  padding: 42px 16px 60px;
  width: calc(210mm + 16px * 2);
  background-color: #f5f5f5;
}

body {
  width: 210mm;
  height: 297mm;
  margin: 0 auto;
  padding: 10mm;

  background-color: var(--color-paper);
  border-radius: 4px;
  color: var(--color-text);
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 25px 40px rgba(0, 0, 0, 0.1),
    0 50px 80px rgba(0, 0, 0, 0.01);

  font-family: var(--font-family-sans);
  font-feature-settings: "ss01";
  font-size: 1rem;
  line-height: var(--line-height);

  display: grid;
  grid-template-columns: [start] 50mm [main] 1fr [end];
  column-gap: 7.5mm;
  align-items: baseline;
  align-content: start;
}

* {
  box-sizing: border-box;
  grid-column: main / end;
}

hr {
  grid-column: -1 / 1;

  margin: calc(1rem * var(--line-height) * 1.8 - 0.076rem) 0
    calc(1rem * var(--line-height) * 0.2);
  border: none;
  border-bottom: 0.076rem solid var(--color-text);
}

/******** TYPOGRAPHY ********/
:is(h1, h2, h3, h4, h5, h6, p) {
  margin: 0;
}
:is(h1, h3, h4, h5, h6, strong) {
  color: var(--color-text-bold);
}

h1 {
  font-family: var(--font-family-serif);
  font-size: 3rem;
  font-weight: 350;
  line-height: calc(1rem * var(--line-height) * 2);
  font-feature-settings: normal;
  font-variation-settings: "opsz" 144, "SOFT" 50, "WONK" 1;
  letter-spacing: normal;
}

h2 {
  font-size: 1rem;
  font-weight: 600;

  grid-column: start / end;
  color: var(--color-accent);
}

h3 {
  line-height: inherit;
  font-weight: 700;
  font-size: inherit;
}
h3 i {
  font-style: normal;
  font-weight: normal;
  color: var(--color-secondary);
}

/******** HEADER ********/
body > header {
  display: contents;
}

body > header h1 {
  grid-column: start / main;
  grid-row: span 2;
}

body > header ol {
  margin-bottom: calc(1rem * var(--line-height));
  align-self: start;
}

/******** ARTICLES ********/
article,
section {
  display: contents;
}
:is(article, section) > header {
  grid-column: start / main;
}

article:not(:first-of-type) > :is(header, ol) {
  margin-top: calc(1rem * var(--line-height));
}

h2 + article {
  margin-top: calc(1rem * var(--line-height) * -1);
}

/******** ROLES AND DATES ********/
dl {
  grid-column: 2 / span 1;
  margin: 0;
}
dd {
  margin: 0;
}
time {
  color: var(--color-secondary);
}

/******** LISTS ********/
ol {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
li::before {
  content: "\2022";
  width: 1mm;
  margin-left: -4mm;
  float: left;
  font-weight: 700;
  color: var(--color-underline);
}
li:hover::before {
  color: var(--color-accent);
}
body > header li::before {
  font-feature-settings: normal;
}

ol.inline li {
  display: inline;
}
ol.inline li::before {
  margin-left: 0;
  padding: 0 2mm;
  float: none;
}
ol.inline li:first-of-type::before {
  content: none;
}
ol.inline li.collapse-padding::before {
  padding-left: 0;
}

/******** SKILLS ********/
.skills h3 {
  grid-column: start / main;
  font-weight: normal;
}
.skills ol.inline {
  text-indent: -6.5mm;
}
.skills ol.inline li:first-of-type::before {
  content: "\2022";
}

/******** INLINE ELEMENTS ********/
a {
  color: inherit;
  text-decoration-line: underline;
  text-decoration-color: var(--color-underline);
  text-decoration-thickness: 0.076em;
  text-underline-offset: calc(0.272em - 0.076em - 0.01em);
}
a:hover,
a:focus,
a:active {
  text-decoration-color: var(--color-accent);
  text-decoration-style: wavy;
  text-decoration-skip-ink: none;
}
a:active {
  opacity: 0.5;
}

strong {
  font-weight: 600;
}

@media print {
  :root {
    padding: 0;
  }
  body {
    box-shadow: none;
    border-radius: 0;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    background-color: #242021;
  }
  body {
    --color-paper: #2e2a2b;
    --color-text-bold: rgba(255, 255, 255, 1);
    --color-text: rgba(255, 255, 255, 0.8);
    --color-secondary: rgba(255, 255, 255, 0.54);
    --color-underline: rgba(255, 255, 255, 0.33);
    --color-accent: #ff8574;
  }
}

